--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,5 @@ colorlog==6.8.2
 # 额外依赖
 jieba==0.42.1
 lemminflect==0.2.3
-pymysql==1.1.0
-sqlalchemy==1.3.16
-# customutil==1.0
+sudachipy==0.6.8
+sudachidict-full==20240409
