--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-httpx==0.27.0
-opencc==1.1.7
-packaging==24.0
-prompt-toolkit==3.0.43
-pyyaml==6.0.1
-re_edge_gpt==0.0.35
-requests==2.31.0
-tenacity==8.2.3
-tiktoken==0.6.0
-tqdm==4.66.2
-colorlog==6.8.2
+httpx
+opencc
+packaging
+prompt_toolkit
+PyYAML
+re_edge_gpt
+Requests
+tenacity
+tiktoken
+tqdm
+colorlog
+openpyxl
+orjson
+EbookLib
+beautifulsoup4
 
 # 额外依赖
 jieba==0.42.1
