--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@ useful_tools/GalTransl_DumpInjector/VNTextPatch/names.xml
 /useful_tools/
 
 # 项目
+/archive/
 /custom/
 /demo/
 
 # 文件
-*.whl
+*.pyc
 *.rar
