--- a/sampleProject/config.inc.yaml
+++ b/sampleProject/config.inc.yaml
@@ -3,7 +3,11 @@
 common:
   loggingLevel: info # 日志级别[DEBUG/INFO/WARNING/ERROR/CRITICAL]
   saveLog: false # 是否记录日志到文件[True/False]
-  workersPerProject: 1 # 多线程，同时翻译的**文件**数量（单文件只能单线程）
+  workersPerProject: 1 # 多线程，同时翻译的**文件**数量。当开启splitFile时，允许单文件多线程。
+  splitFile: false # 是否分割文件，分割文件能提高单个文件的翻译速度，但有时会影响翻译结果。[True/False]
+  splitFileMethod: "EqualPartsSplitter" # 分句方法，EqualPartsSplitter为对文件平均分句，DictionaryCountSplitter为指定条数分句。[EqualPartsSplitter/DictionaryCountSplitter]
+  splitFileNum: -1 # 选择EqualPartsSplitter分割文件时，表示每个文件拆分的数量；选择DictionaryCountSplitter分割文件时，表示拆分句子的条数上限，也就是n句拆分一次；设置为-1则表示与workersPerProject一致。
+  splitFileCrossNum: 10 # 分割文件时的交叉句数量，交叉句是指分割部分之间重叠的部分，交叉句可能可以提高翻译质量。
   language: "ja2zh-cn" # 源语言2(to)目标语言。[zh-cn/zh-tw/en/ja/ko/ru/fr]
   save_steps: 1 # 每翻译n次保存一次缓存，单个文件较大时可以调高到10-100来提升速度。[1-999]
   linebreakSymbol: "\r\n" # 这个项目在json中使用的换行符，找问题和自动修复时用到，不影响翻译。
@@ -11,6 +15,7 @@ common:
   skipRetry: false # 开启则解析结果出错时跳过循环重试，直接用"Fail Translation"占位。[True/False]
   retranslFail: false # 重启时重翻所有显示为"Fail Translation"的句子。[True/False]
   retranslKey: "" # 重启时主动重翻在problem或pre_jp中包含此关键字的句子，例如"残留日文"
+
   # 通用翻译设置
   gpt.numPerRequestTranslate: 8 # 单次翻译句子数量，推荐值 < 15
   gpt.streamOutputMode: true # 流式输出效果，多线程下无效。[True/False]
@@ -27,10 +32,12 @@ common:
 # 插件选择，插件介绍可在启动程序后选择showplugs查看
 # 某个插件自己的设置进入plugins的插件目录内修改对应的yaml文件
 plugin:
-  filePlugin: file_galtransl_json # 指定文件读取插件，默认使用file_galtransl_json
+  filePlugin: file_galtransl_json # 文件插件，用于支持更多格式，默认使用file_galtransl_json
   textPlugins: # 文本处理插件列表，按顺序执行
     - text_common_normalfix # 默认插件，修复常规通用问题
-    #- (project_dir)text_common_example # 示例，(project_dir)代表插件在项目的plugins目录里
+   #- (project_dir)text_common_example # 示例，(project_dir)代表插件在项目的plugins目录里
+ #file_subtitle_srt_lrc_vtt: # 示例，可以在项目配置文件中覆盖插件的设置项
+ #   保存双语字幕: true
 
 # 代理设置，使用中转供应商时一般不用开代理
 proxy:
